--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,6 +1,5 @@
 .home {
 
-
   .intro {
 
     @media @phone {
@@ -18,6 +17,7 @@
     }
 
     .intro__img {
+      margin-top: 10.3rem;
       @media @phone {
         height: 120px;
         width: 100%;
