--- a/less/variables.less
+++ b/less/variables.less
@@ -4,6 +4,7 @@
 @nav-bg: @wild-sand;
 @nav-font: @river-bend;
 @nav-border: @sea-shell;
+@nav-bg-transparent: rgba(246, 246, 246, 0.9);
 
 @header-font-color: @ebony-clay;
 @main-font-color: @shuttle-gray;
